# ansys-tools-local-product-launcher

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS  CNAME  CONTRIBUTORS.md  README.rst  index.html  pyproject.toml  robots.txt  tox.ini  versions.json
.github/workflows/: ci_cd.yml  label.yml
dev/: .buildinfo  cli.html  genindex.html  index.html  intro.html  objects.inv  plugin_creation.html  py-modindex.html  rationale.html  search.html  searchindex.js
dev/_sources/: index.rst.txt  rationale.rst.txt
dev/_sources/api/: config.rst.txt  interface.rst.txt
dev/_sources/api/helpers/: grpc.rst.txt
dev/api/: config.html  index.html  interface.html  launch.html  product_instance.html
dev/api/helpers/: grpc.html  index.html  ports.html
doc/: .vale.ini
doc/source/: cli.rst  conf.py  contribute.rst  index.rst  intro.rst  plugin_creation.rst  rationale.rst
doc/source/api/: index.rst  launch.rst  product_instance.rst
doc/source/api/helpers/: ansys_root.rst  index.rst  ports.rst
doc/source/user_guide/: cli.rst  index.rst  plugin_creation.rst  rationale.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/Vocab/CustomVocab/: accept.txt
examples/example_httpserver_plugin/: pyproject.toml
examples/example_httpserver_plugin/src/example_httpserver_plugin/: __init__.py  launcher.py
examples/example_scripts/: cli_configure.py  index.rst  plugin.rst  py_configure.py
release/: versions.json
src/ansys/tools/local_product_launcher/: __init__.py  _cli.py  _plugins.py  cli.py  config.py  grpc_transport.py  interface.py  launch.py  product_instance.py  server_handle.py
src/ansys/utilities/local_instancemanager_server/: __init__.py  cli.py  config.py  interface.py  launch.py  plugins.py  server_handle.py
tests/: conftest.py  test_entry_point.py  test_metadata.py
tests/pkg_with_entrypoint/: pyproject.toml
tests/pkg_with_entrypoint/src/pkg_with_entrypoint/: __init__.py  launcher.py
tests/test_cli/: common.py  conftest.py  test_multiple_plugins.py  test_single_plugin.py
tests/test_helpers/: test_get_ansys_root.py
tests/test_integration/: simple_test_launcher.py  simple_test_server.py  test_simple_launcher.py
tests/test_plugins/: conftest.py  test_plugins.py
version/: index.html
version/0.1/: .buildinfo  contribute.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.1/_downloads/792132e58d01479c850e2221191b01fb/: py_configure.ipynb
version/0.1/_downloads/e2eeeaa94603386a96c556143bd93722/: cli_configure.ipynb
version/0.1/_sources/: sg_execution_times.rst.txt
version/0.1/_sources/api/: config.rst.txt  index.rst.txt
version/0.1/_sources/examples/: cli_configure.rst.txt  plugin.rst.txt  py_configure.rst.txt  sg_execution_times.rst.txt
version/0.1/_sources/user_guide/: plugin_creation.rst.txt
version/0.1/api/: config.html  index.html  interface.html  launch.html  product_instance.html
version/0.1/api/helpers/: announcement.html  grpc.html  index.html  ports.html
version/0.1/examples/: announcement.html  cli_configure.html  index.html  py_configure.html  sg_execution_times.html
version/0.1/user_guide/: cli.html  index.html  plugin_creation.html  rationale.html
version/0.2/: contribute.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_sources/: index.rst.txt  sg_execution_times.rst.txt
version/0.2/_sources/examples/: cli_configure.rst.txt  py_configure.rst.txt  sg_execution_times.rst.txt
version/0.2/api/: config.html  grpc_transport.html  index.html  interface.html  product_instance.html
version/0.2/api/helpers/: grpc.html  index.html
version/0.2/examples/: cli_configure.html  index.html  plugin.html
version/0.2/user_guide/: cli.html  index.html  rationale.html
version/0.3/: contribute.html  index.html  objects.inv  py-modindex.html
version/0.3/_sources/api/: interface.rst.txt
version/0.3/_sources/examples/: sg_execution_times.rst.txt
version/0.3/_sources/user_guide/: rationale.rst.txt
version/0.3/_static/: search.json
version/0.3/api/: product_instance.html
version/0.3/examples/: sg_execution_times.html
version/0.3/user_guide/: cli.html  rationale.html
version/dev/: .buildinfo  contribute.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/_downloads/68d110caffb5df5a3ec54144387b2995/: cli_configure.py
version/dev/_downloads/792132e58d01479c850e2221191b01fb/: py_configure.ipynb
version/dev/_downloads/e2eeeaa94603386a96c556143bd93722/: cli_configure.ipynb
version/dev/_sources/: contribute.rst.txt  intro.rst.txt  sg_execution_times.rst.txt
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/examples/: py_configure.rst.txt  sg_execution_times.rst.txt
version/dev/_sources/user_guide/: index.rst.txt  plugin_creation.rst.txt
version/dev/_static/: README.md  search.json
version/dev/api/: config.html  grpc_transport.html  index.html  interface.html  launch.html  product_instance.html
version/dev/api/helpers/: grpc.html  index.html  ports.html
version/dev/examples/: cli_configure.html  index.html  plugin.html  py_configure.html  sg_execution_times.html
version/dev/user_guide/: cli.html  index.html  plugin_creation.html  rationale.html
version/stable/: contribute.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/_downloads/792132e58d01479c850e2221191b01fb/: py_configure.ipynb
version/stable/_sources/: sg_execution_times.rst.txt
version/stable/_sources/api/: launch.rst.txt  (+2 more)
version/stable/_static/: search.json
version/stable/api/: config.html  grpc_transport.html  index.html  interface.html  launch.html
version/stable/examples/: cli_configure.html  index.html  plugin.html  py_configure.html  sg_execution_times.html
version/stable/user_guide/: index.html  plugin_creation.html  rationale.html
(+20 files in other folders)
