[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-tools-local-product-launcher"
version = "0.1.1"
description = "A utility for launching Ansys products on a local machine"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/ansys-tools-local-product-launcher"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "ansys", from = "src" }]

[tool.poetry.scripts]
ansys-launcher = "ansys.tools.local_product_launcher._cli:cli"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.1.3"
grpcio-health-checking = ">=1.43"
grpcio = ">=1.51.1"
appdirs = ">=1.4.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0"
black = ">=23"
mypy = ">=0"
mypy-extensions = ">=0.4.3"
types-setuptools = ">=65.6.0.2"

Sphinx = ">=6.0"
sphinx-copybutton = ">=0.5"
sphinx-autodoc-typehints = ">=1.23"
numpydoc = ">=1.3"
ansys-sphinx-theme = ">=0"
sphinx-click = ">=4.4.0"
sphinx-design = ">=0.4.0"
sphinx-gallery = ">=0.15.0"
types-backports = ">=0.1.3"
example-httpserver-plugin = { path = "examples/example_httpserver_plugin", develop = true }
matplotlib = ">=3.8.2"
pypandoc-binary = ">=1.12"
pypandoc = ">=1.12"
requests = ">=2.31.0"
ipykernel = ">=6.29.1"
types-requests = ">=2.31.0.20240125"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0.0"
pkg-with-entrypoint = { path = "tests/pkg_with_entrypoint" }

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests:$MYPY_CONFIG_FILE_DIR/examples/example_httpserver_plugin/src"

[[tool.mypy.overrides]]
module = ["grpc.*", "grpc_health.*", "appdirs", "pytest"]
ignore_missing_imports = true
